refactor: обновил equals(), добавил модификаторы доступа, поменял нейминг переменных, заменил магические цифры на константы